# elan_data

./: .gitignore  README.md  TODO.md  linting.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run-checks.sh  setup.cfg
src/elan_data/: __init__.py  elan_data.py  elan_utils.py  tier.py  tiers.py
tests/: .gitignore  DEP_conftest.py  README.md  conftest.py  helper.py  old_tests.py  test.eaf  test_elan.py  test_elan_data.py  test_elan_utils.py  test_tiers.py
tests/created/: notes.txt  test_dst_filter.rttm
tests/keys/: key-filtered.rttm  key-filtered.txt  key-formatted.txt  key-no-audio.eaf  key.csv  key.eaf  key.pfsx  key.rttm  key.txt  outside_APLS.eaf  outside_APLS.pfsx
tutorials/: .gitignore  introduction.ipynb
tutorials/datasets/: notes.txt
