[metadata]
name = elan_data
version = 1.7.0
author = Alejandro Ciuba
description = Work with ELAN transcription files and their corresponding audio files via Python code.
platforms = linux, osx, win32
keywords = elan, linguistics, transcription

[options]
packages =
    elan_data
install_requires =
    pandas
    numpy
    matplotlib
python_requires = >= 3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
test = 
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
elan_data = py.typed

[flake8]
max-line-length = 280
