[metadata]
name = elan_data
version = 1.7.0
author = Alejandro Ciuba
author_email = alejandrociuba@pitt.edu
description = Work with ELAN transcription files and their corresponding audio files via Python code.
url = https://github.com/AlejandroCiuba/elan_data
platforms = linux, osx, win32
keywords = elan, linguistics, transcription

[options]
packages =
    elan_data
exclude =
    tests*
    tutorials*
    coverage_report*
install_requires =
    pandas
    numpy
    matplotlib
python_requires = >= 3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
test = 
    pytest
    pytest-cov
    pytest-mock
    mypy
    flake8
    tox

[options.package_data]
elan_data = py.typed

[tool:pytest]
addopts = --cov=src
testpaths = tests

[mypy]
mypy_path = src
check_untyped_defs = true
disallow_any_generics = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[flake8]
max-line-length = 280
